--- a/guides/IG-RL-sviluppo/styles/RL-css/style.css
+++ b/guides/IG-RL-sviluppo/styles/RL-css/style.css
@@ -406,8 +406,8 @@ table{
 }
 
 /* bordi tabelle*/
-table, td, th {
-    border: 1px solid;
+.libreria table, td, th {
+    border: 0.5px solid #ccc;
 }
 
 /* Padding celle tabelle*/
